Another set of unit tests rebased to use KRaft and Node Pools
Signed-off-by: Jakub Scholz <www@scholzj.com>